--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.18",
     "@mui/material": "^5.15.18",
+    "@next/third-parties": "^14.2.5",
     "fontsource-noto-sans-jp": "^4.0.0",
     "next": "14.2.3",
-    "react": "^18",
-    "react-dom": "^18"
+    "react": "^17.0.0 || ^18.0.0",
+    "react-dom": "^17.0.0 || ^18.0.0"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
